hotfix: fixed launch build
